# ABOUTME: Standalone headless-Chrome automation primitives shared by dravr crates
# ABOUTME: Launch, persistent profiles, stealth, CDP input, cookie sessions, streaming capture, vision seam

[workspace]
members = ["."]

# ============================================================================
# Build Profiles
# ============================================================================

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# ============================================================================
# Workspace Lint Configuration (canonical dravr set — see .build/cargo/lints.toml)
# ============================================================================

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Type conversion casts - allowed when properly validated
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Const fn suggestions - clippy suggests const for methods that can't be const
missing_const_for_fn = "allow"

# Significant drop tightening - false positives with async lock guards
significant_drop_tightening = "allow"

# Module naming - allow repetition for clarity
module_name_repetitions = "allow"

# Enforce `use` imports over inline qualified paths
absolute_paths = "deny"

# Multiple dependency versions - unavoidable in some transitive deps
multiple_crate_versions = "allow"

# Missing errors doc - not all error returns need doc comments
missing_errors_doc = "allow"

# must_use candidate - too noisy for builders and constructors
must_use_candidate = "allow"

# return_self_not_must_use - builder pattern methods
return_self_not_must_use = "allow"

# redundant_pub_crate - explicit visibility is clearer
redundant_pub_crate = "allow"

# ============================================================================
# Package Configuration
# ============================================================================

[package]
name = "dravr-browser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Headless-Chrome automation primitives: launch, persistent profiles, stealth, CDP input, and streaming network capture"
repository = "https://github.com/dravr-ai/dravr-browser"
homepage = "https://github.com/dravr-ai/dravr-browser"
documentation = "https://docs.rs/dravr-browser"
keywords = ["headless-chrome", "browser", "automation", "cdp", "scraping"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = "0.9"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.45", features = ["time", "rt", "macros", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }

[lints]
workspace = true
